@@ -13,12 +13,12 @@ package org.eclipse.scout.contacts.server.security;
 import java.security.AllPermission;
 import java.security.Permissions;
 
-import org.eclipse.scout.contacts.shared.security.UserIdAccessControlService;
+import org.eclipse.scout.contacts.shared.security.AccessControlService;
 import org.eclipse.scout.rt.platform.Replace;
 import org.eclipse.scout.rt.shared.security.RemoteServiceAccessPermission;
 
 @Replace
-public class AccessControlService extends UserIdAccessControlService {
+public class ServerAccessControlService extends AccessControlService {
 
   @Override
   protected Permissions execLoadPermissions(String userId) {
